text default color (to avoid dark mode trap)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,7 @@
 
 body {
   background-color: #000020;
+  color: #111;
   margin: 0;
   overflow: hidden;
   font-family: "Inter", sans-serif;
